force-app/main/default/objects/ACBalCF__c/ACBalCF__c.object-meta.xml
<CustomObject>
    <label>A/C Bal+C/F</label>
    <nameField>
        <displayFormat>ACCF-{000000}</displayFormat>
        <label>A/C BAL+C/F ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A/C Bal+C/F</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>