force-app/main/default/objects/ACBalCF__c/fields/ACBalID__c.field-meta.xml
<CustomField>
    <fullName>ACBalID__c</fullName>
    <label>A/C BAL ID</label>
    <referenceTo>ACBalance__c</referenceTo>
    <relationshipLabel>A/C BAL+C/F</relationshipLabel>
    <relationshipName>ACBalCFID</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>