force-app/main/default/objects/ACBalCF__c/fields/BalanceTypeCF__c.field-meta.xml
<CustomField>
    <fullName>BalanceTypeCF__c</fullName>
    <label>BALANCE TYPE-C/F</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BalanceType</valueSetName>
    </valueSet>
</CustomField>