force-app/main/default/objects/ACBalCF__c/fields/CFID__c.field-meta.xml
<CustomField>
    <fullName>CFID__c</fullName>
    <label>C/F ID</label>
    <referenceTo>CashFlow__c</referenceTo>
    <relationshipLabel>A/C BAL+C/F</relationshipLabel>
    <relationshipName>ACBalCFID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>