force-app/main/default/objects/ACBalCF__c/fields/CFRollupStatus__c.field-meta.xml
<CustomField>
    <fullName>CFRollupStatus__c</fullName>
    <label>C/F ROLLUP STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>