force-app/main/default/objects/ACBalCF__c/fields/TranBalCreditCF__c.field-meta.xml
<CustomField>
    <fullName>TranBalCreditCF__c</fullName>
    <label>TRANSACTION BAL-CREDIT-C/F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>